--- a/index.html
+++ b/index.html
@@ -2229,54 +2229,54 @@ p.nominalBounds = new cjs.Rectangle(-168.6,-37.7,337.3,75.7);
 (lib.emoji_zombie = function(mode,startPosition,loop) {
 	this.initialize(mode,startPosition,loop,{});
 	// timeline functions:
-	this.frame_40 = function() {
-		this.stop();
+	this.frame_12 = function() {
+		window.dispatchEvent(new Event('playZombieSound'));
 	}
 	// actions tween:
-	this.timeline.addTween(cjs.Tween.get(this).wait(40).call(this.frame_40).wait(1));
+	this.timeline.addTween(cjs.Tween.get(this).wait(12).call(this.frame_12).wait(123));
 	// Layer_1
 	this.instance = new lib.emoji2_anim();
 	this.instance.parent = this;
 	this.instance.setTransform(0,50.1,0.834,0.834);
 	this.instance.alpha = 0;
-	this.timeline.addTween(cjs.Tween.get(this.instance).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.07,scaleY:1.07,y:0},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.07,scaleY:1.07,y:0},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.11,scaleY:1.11,y:0},0).wait(1).to({scaleX:1.07,scaleY:1.07},0).wait(1).to({scaleX:1.04,scaleY:1.04},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({scaleX:1.01,scaleY:1.01},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).wait(2));
+	this.timeline.addTween(cjs.Tween.get(this.instance).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.07,scaleY:1.07,y:0},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.07,scaleY:1.07,y:0},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).wait(1).to({regY:0,scaleX:1.04,scaleY:1.04,y:0},0).wait(1).to({scaleX:1.08,scaleY:1.08,y:-0.1},0).wait(1).to({scaleX:1.13,scaleY:1.13},0).wait(1).to({regY:-0.1,scaleX:1.17,scaleY:1.17},0).wait(1).to({regY:0,scaleX:1.11,scaleY:1.11,y:0},0).wait(1).to({scaleX:1.07,scaleY:1.07},0).wait(1).to({scaleX:1.04,scaleY:1.04},0).wait(1).to({scaleX:1.02,scaleY:1.02},0).wait(1).to({scaleX:1.01,scaleY:1.01},0).wait(1).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1},0).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).wait(96));
 }).prototype = p = new cjs.MovieClip();
 p.nominalBounds = new cjs.Rectangle(-50,0,100.1,100.1);
 (lib.emoji_scared = function(mode,startPosition,loop) {
 	this.initialize(mode,startPosition,loop,{});
 	// timeline functions:
-	this.frame_40 = function() {
-		this.stop();
+	this.frame_14 = function() {
+		window.dispatchEvent(new Event('womanSFX'));
 	}
 	// actions tween:
-	this.timeline.addTween(cjs.Tween.get(this).wait(40).call(this.frame_40).wait(1));
+	this.timeline.addTween(cjs.Tween.get(this).wait(14).call(this.frame_14).wait(131));
 	// Layer_5
 	this.instance = new lib.emoji1_anim();
 	this.instance.parent = this;
 	this.instance.setTransform(0,50.1,0.834,0.834);
 	this.instance.alpha = 0;
 	this.instance._off = true;
-	this.timeline.addTween(cjs.Tween.get(this.instance).wait(24).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(1));
+	this.timeline.addTween(cjs.Tween.get(this.instance).wait(24).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(105));
 	// Layer_4
 	this.instance_1 = new lib.emoji1_anim();
 	this.instance_1.parent = this;
 	this.instance_1.setTransform(0,50.1,0.834,0.834);
 	this.instance_1.alpha = 0;
 	this.instance_1._off = true;
-	this.timeline.addTween(cjs.Tween.get(this.instance_1).wait(16).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(9));
+	this.timeline.addTween(cjs.Tween.get(this.instance_1).wait(16).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(113));
 	// Layer_3
 	this.instance_2 = new lib.emoji1_anim();
 	this.instance_2.parent = this;
 	this.instance_2.setTransform(0,50.1,0.834,0.834);
 	this.instance_2.alpha = 0;
 	this.instance_2._off = true;
-	this.timeline.addTween(cjs.Tween.get(this.instance_2).wait(8).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(17));
+	this.timeline.addTween(cjs.Tween.get(this.instance_2).wait(8).to({_off:false},0).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(121));
 	// Layer_1
 	this.instance_3 = new lib.emoji1_anim();
 	this.instance_3.parent = this;
 	this.instance_3.setTransform(0,50.1,0.834,0.834);
 	this.instance_3.alpha = 0;
-	this.timeline.addTween(cjs.Tween.get(this.instance_3).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(25));
+	this.timeline.addTween(cjs.Tween.get(this.instance_3).to({regY:-0.1,scaleX:1,scaleY:1,y:-0.1,alpha:1},7,cjs.Ease.quadIn).to({regY:0,scaleX:0.83,scaleY:0.83,y:-50,alpha:0},8,cjs.Ease.quadOut).to({_off:true},1).wait(129));
 }).prototype = p = new cjs.MovieClip();
 p.nominalBounds = new cjs.Rectangle(-50,0,100.1,100.1);
 (lib.emoji_dead = function(mode,startPosition,loop) {
@@ -2352,13 +2352,9 @@ p.nominalBounds = new cjs.Rectangle(-275.6,156.5,550.6,129.3);
 (lib.background = function(mode,startPosition,loop) {
 	this.initialize(mode,startPosition,loop,{});
 	// timeline functions:
-	this.frame_51 = function() {
-		window.dispatchEvent(new Event('playZombieSound'));
-	}
 	this.frame_59 = function() {
 		this.stop();
 		window.dispatchEvent(new Event('playBottom'));
-		window.dispatchEvent(new Event('womanSFX'));
 	}
 	this.frame_60 = function() {
 		window.dispatchEvent(new Event('playFootSteps'));
@@ -2385,7 +2381,6 @@ p.nominalBounds = new cjs.Rectangle(-275.6,156.5,550.6,129.3);
 	}
 	this.frame_199 = function() {
 		this.zombie.gotoAndPlay(36);
-		window.dispatchEvent(new Event('playZombieSound'));
 	}
 	this.frame_212 = function() {
 		window.dispatchEvent(new Event('playHitSound'));
@@ -2399,7 +2394,7 @@ p.nominalBounds = new cjs.Rectangle(-275.6,156.5,550.6,129.3);
 		window.dispatchEvent(new Event('playPackShot'));
 	}
 	// actions tween:
-	this.timeline.addTween(cjs.Tween.get(this).wait(51).call(this.frame_51).wait(8).call(this.frame_59).wait(1).call(this.frame_60).wait(29).call(this.frame_89).wait(26).call(this.frame_115).wait(47).call(this.frame_162).wait(1).call(this.frame_163).wait(12).call(this.frame_175).wait(22).call(this.frame_197).wait(2).call(this.frame_199).wait(13).call(this.frame_212).wait(13).call(this.frame_225).wait(51).call(this.frame_276).wait(1));
+	this.timeline.addTween(cjs.Tween.get(this).wait(59).call(this.frame_59).wait(1).call(this.frame_60).wait(29).call(this.frame_89).wait(26).call(this.frame_115).wait(47).call(this.frame_162).wait(1).call(this.frame_163).wait(12).call(this.frame_175).wait(22).call(this.frame_197).wait(2).call(this.frame_199).wait(13).call(this.frame_212).wait(13).call(this.frame_225).wait(51).call(this.frame_276).wait(1));
 	// emoji_3
 	this.instance = new lib.emoji_dead();
 	this.instance.parent = this;
@@ -3194,8 +3189,8 @@ lib.properties = {
 	color: "#FFFFFF",
 	opacity: 1.00,
 	manifest: [
-		{src:"index_atlas_P_.png?1657271359488", id:"index_atlas_P_"},
-		{src:"index_atlas_NP_.jpg?1657271359489", id:"index_atlas_NP_"}
+		{src:"index_atlas_P_.png?1657273413294", id:"index_atlas_P_"},
+		{src:"index_atlas_NP_.jpg?1657273413294", id:"index_atlas_NP_"}
 	],
 	preloads: []
 };
@@ -3281,6 +3276,8 @@ function handleComplete(evt,comp) {
 	//Code to support hidpi screens and responsive scaling.
 	function makeResponsive(isResp, respDim, isScale, scaleType) {		
 		var lastW, lastH, lastS=1;		
+		window.addEventListener('resize', resizeCanvas);		
+		resizeCanvas();		
 		function resizeCanvas() {			
 			var w = lib.properties.width, h = lib.properties.height;			
 			var iw = window.innerWidth, ih=window.innerHeight;			
